--- a/.gitignore
+++ b/.gitignore
@@ -1,39 +1,48 @@
-# See http://help.github.com/ignore-files/ for more about ignoring files.
-
 # compiled output
-/dist
-/tmp
-/out-tsc
+dist/
+tmp/
+out-tsc/
 
-# dependencies
-/node_modules
+# dependency directories
+node_modules/
 
-# IDEs and editors
-/.idea
-.project
-.classpath
-.c9/
-*.launch
-.settings/
-*.sublime-workspace
+# environment variables
+.env
+.env.*
+!.env.example
 
-# IDE - VSCode
+# yarn
+pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
+
+# vscode
 .vscode/*
 !.vscode/settings.json
-!.vscode/tasks.json
-!.vscode/launch.json
 !.vscode/extensions.json
 
-# misc
-/.sass-cache
-/connect.lock
-/coverage
-/libpeerconnection.log
-npm-debug.log
-yarn-error.log
-testem.log
-/typings
+# logs
+logs/
+*.log
 
-# System Files
-.DS_Store
-Thumbs.db
+# runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
+
+# coverage
+lib-cov
+coverage/
+*.lcov
+
+# caching
+*.tsbuildinfo
+.npm
+.eslintcache
+.yarn-integrity
+.angular
