--- a/.prettierrc
+++ b/.prettierrc
@@ -1,3 +1,14 @@
 {
-  "singleQuote": true
+  "singleQuote": true,
+  "arrowParens": "always",
+  "endOfLine": "lf",
+  "trailingComma": "es5",
+  "printWidth": 120,
+  "bracketSpacing": true,
+  "overrides": [
+    {
+      "files": ["*.html"],
+      "options": { "parser": "html" }
+    }
+  ]
 }
