--- a/package.json
+++ b/package.json
@@ -5,16 +5,66 @@
   "scripts": {
     "start": "nx serve",
     "build": "nx build",
-    "test": "nx test"
+    "test": "nx test",
+    "lint": "nx lint",
+    "postinstall": "ngcc --properties es2015 browser module main"
   },
   "private": true,
-  "dependencies": {},
+  "dependencies": {
+    "@angular/animations": "~13.2.0",
+    "@angular/cdk": "^13.2.4",
+    "@angular/common": "~13.2.0",
+    "@angular/compiler": "~13.2.0",
+    "@angular/core": "~13.2.0",
+    "@angular/forms": "~13.2.0",
+    "@angular/material": "^13.2.4",
+    "@angular/platform-browser": "~13.2.0",
+    "@angular/platform-browser-dynamic": "~13.2.0",
+    "@angular/router": "~13.2.0",
+    "keycloak-angular": "^9.1.0",
+    "keycloak-js": "^17.0.0",
+    "rxjs": "~7.4.0",
+    "tslib": "^2.0.0",
+    "zone.js": "~0.11.4"
+  },
   "devDependencies": {
-    "@nrwl/tao": "13.8.3",
+    "@angular-devkit/build-angular": "~13.2.0",
+    "@angular-eslint/eslint-plugin": "~13.0.1",
+    "@angular-eslint/eslint-plugin-template": "~13.0.1",
+    "@angular-eslint/template-parser": "~13.0.1",
+    "@angular/cli": "~13.2.0",
+    "@angular/compiler-cli": "~13.2.0",
+    "@angular/language-service": "~13.2.0",
+    "@nrwl/angular": "^13.8.3",
     "@nrwl/cli": "13.8.3",
+    "@nrwl/cypress": "13.8.3",
+    "@nrwl/eslint-plugin-nx": "13.8.3",
+    "@nrwl/jest": "13.8.3",
+    "@nrwl/linter": "13.8.3",
+    "@nrwl/tao": "13.8.3",
     "@nrwl/workspace": "13.8.3",
+    "@types/jest": "27.0.2",
     "@types/node": "16.11.7",
-    "typescript": "~4.5.2",
-    "prettier": "^2.5.1"
+    "@typescript-eslint/eslint-plugin": "~5.10.0",
+    "@typescript-eslint/parser": "~5.10.0",
+    "autoprefixer": "^10.4.0",
+    "cypress": "^9.1.0",
+    "eslint": "~8.7.0",
+    "eslint-config-prettier": "8.1.0",
+    "eslint-plugin-cypress": "^2.10.3",
+    "eslint-plugin-jest": "^26.1.1",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-promise": "^6.0.0",
+    "jest": "27.2.3",
+    "jest-preset-angular": "11.1.1",
+    "ng-packagr": "^13.0.0",
+    "postcss": "^8.4.5",
+    "postcss-import": "^14.0.2",
+    "postcss-preset-env": "^6.7.0",
+    "postcss-url": "^10.1.1",
+    "prettier": "^2.5.1",
+    "tailwindcss": "^3.0.2",
+    "ts-jest": "27.0.5",
+    "typescript": "~4.5.2"
   }
 }
