updated env example

--- a/.env.example
+++ b/.env.example
@@ -28,4 +28,8 @@ DB_PASSWORD=
 
 KEYCLOAK_ADMIN=
 KEYCLOAK_ADMIN_PASSWORD=
-# AUTH_SERVER_URL=
+AUTH_SERVER_URL=
+REALM=
+FRONTEND_CLIENT_ID=
+BACKEND_CLIENT_ID=
+SECRET=
