--- a/package.json
+++ b/package.json
@@ -30,10 +30,15 @@
     "@angular/platform-browser-dynamic": "~13.2.0",
     "@angular/router": "~13.2.0",
     "@nestjs/common": "^8.0.0",
+    "@nestjs/config": "^1.2.0",
     "@nestjs/core": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
+    "graphql": "^16.3.0",
+    "joi": "^17.6.0",
     "keycloak-angular": "^9.1.0",
+    "keycloak-connect": "^17.0.0",
     "keycloak-js": "^17.0.0",
+    "nest-keycloak-connect": "^1.8.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "~7.4.0",
     "tslib": "^2.0.0",
@@ -47,6 +52,8 @@
     "@angular/cli": "~13.2.0",
     "@angular/compiler-cli": "~13.2.0",
     "@angular/language-service": "~13.2.0",
+    "@nestjs/apollo": "^10.0.6",
+    "@nestjs/graphql": "^10.0.6",
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
     "@nrwl/angular": "^13.8.3",
@@ -63,6 +70,7 @@
     "@types/node": "16.11.7",
     "@typescript-eslint/eslint-plugin": "~5.10.0",
     "@typescript-eslint/parser": "~5.10.0",
+    "apollo-server-express": "^3.6.3",
     "autoprefixer": "^10.4.0",
     "cypress": "^9.1.0",
     "eslint": "~8.7.0",
